--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "nodejs_tut",
+  "name": "nodejs-complete-guide",
   "version": "1.0.0",
-  "description": "node Js tutorial",
+  "description": "Complete Node.js Guide",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "start-server": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Jyoti379/nodeJs_tut.git"
-  },
-  "author": "jyoti",
+  "author": "Maximilian Schwarzmüller",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Jyoti379/nodeJs_tut/issues"
-  },
-  "homepage": "https://github.com/Jyoti379/nodeJs_tut#readme",
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^1.18.3"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "pug": "^2.0.3"
   }
 }
