--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel": "^6.23.0",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
